<resources>
    <string name="app_name">Spend.Me</string>
    <string name="welcome_to_spend_me">Welcome to Spend.Me</string>
    <string name="tv_title_choose">Choose an option</string>
    <string name="bt_categories">Categories</string>
    <string name="bt_spends">Spends</string>
    <string name="bt_options">Options</string>
    <string name="add_symbol">+</string>
    <string name="no_categories">There is no categories!</string>
    <string name="new_category">New Category</string>
    <string name="cname">Name</string>
    <string name="cchar">Category Character</string>
    <string name="btcancel">Cancel</string>
    <string name="btadd">Add</string>
    <string name="new_spend">New Spend</string>
    <string name="etvalue">Value</string>
    <string name="login_with">Login with...</string>
    <string name="dropbox">Dropbox</string>
    <string name="onedrive">OneDrive</string>
    <string name="googledrive">GoogleDrive</string>
    <string name="no_spends">There is no spends!</string>
    <string name="title_activity_test">TestActivity</string>
</resources>
