<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.obernardovieira.spendme.OptionsActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_with"
        android:id="@+id/tv_loginwith"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="20sp" />

    <Button
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:text="@string/dropbox"
        android:id="@+id/bt_dropbox"
        android:layout_below="@+id/tv_loginwith"
        android:layout_centerHorizontal="true"
        android:onClick="loginWithDropbox" />

    <Button
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:text="@string/onedrive"
        android:id="@+id/bt_onedrive"
        android:layout_below="@+id/bt_dropbox"
        android:layout_centerHorizontal="true"
        android:onClick="loginWithOneDrive" />

    <Button
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:text="@string/googledrive"
        android:id="@+id/bt_gdrive"
        android:layout_below="@+id/bt_onedrive"
        android:layout_centerHorizontal="true"
        android:onClick="loginWithGoogleDrive" />
</RelativeLayout>
